--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       run: npm ci
 
     - name: Run npm build
-      run: npm run build.ghpages
+      run: npm run build
 
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
