--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "luxon": "^3.0.3",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
+    "markdown-it-attrs": "^4.1.4",
     "markdown-it-implicit-figures": "^0.10.0"
   }
 }
