--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "New e-editiones homepage",
   "scripts": {
     "build": "npx @11ty/eleventy",
-    "build.ghpages": "npx @11ty/eleventy --pathprefix 11ty-homepage",
+    "build.all": "DEBUG=tei-publisher TP_NO_CACHE=true npx @11ty/eleventy",
     "bench": "DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
     "watch": "npx @11ty/eleventy --watch",
-    "serve": "npx @11ty/eleventy --serve --port 8081",
+    "serve": "DEBUG=tei-publisher npx @11ty/eleventy --serve --port 8081",
     "start": "npx @11ty/eleventy --serve",
     "debug": "DEBUG=* npx @11ty/eleventy"
   },
@@ -26,6 +26,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-attrs": "^4.1.4",
-    "markdown-it-implicit-figures": "^0.10.0"
+    "markdown-it-implicit-figures": "^0.10.0",
+    "@teipublisher/pb-eleventy-plugin": "^0.9.0"
   }
 }
