--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "New e-editiones homepage",
   "scripts": {
-    "build": "npx @11ty/eleventy",
+    "build": "DEBUG=tei-publisher npx @11ty/eleventy",
     "build.all": "DEBUG=tei-publisher TP_NO_CACHE=true npx @11ty/eleventy",
     "bench": "DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
-    "watch": "npx @11ty/eleventy --watch",
-    "serve": "DEBUG=tei-publisher npx @11ty/eleventy --serve --port 8081",
-    "start": "npx @11ty/eleventy --serve",
+    "watch": "TP_DISABLED=true DEBUG=tei-publisher npx @11ty/eleventy --watch",
+    "serve": "TP_DISABLED=true DEBUG=tei-publisher npx @11ty/eleventy --serve --port 8081",
+    "start": "npm run serve",
     "debug": "DEBUG=* npx @11ty/eleventy"
   },
   "repository": {
@@ -27,6 +27,6 @@
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-attrs": "^4.1.4",
     "markdown-it-implicit-figures": "^0.10.0",
-    "@teipublisher/pb-eleventy-plugin": "^0.9.0"
+    "@teipublisher/pb-eleventy-plugin": "^0.9.4"
   }
 }
