--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,4 @@ jobs:
         deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         publish_dir: ./_site
         publish_branch: gh-pages
-        cname: eeditiones.teipublisher.com
+        cname: www.e-editiones.org
