--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
   "license": "MIT",
   "dependencies": {
     "@11ty/eleventy": "^1.0.2",
+    "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
+    "@teipublisher/pb-eleventy-plugin": "^0.9.4",
     "eleventy-plugin-toc": "^1.1.5",
     "luxon": "^3.0.3",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-attrs": "^4.1.4",
-    "markdown-it-implicit-figures": "^0.10.0",
-    "@teipublisher/pb-eleventy-plugin": "^0.9.4"
+    "markdown-it-implicit-figures": "^0.10.0"
   }
 }
