--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "@teipublisher/pb-eleventy-plugin": "^0.9.4",
+    "eleventy-favicon": "^1.1.3",
     "eleventy-plugin-toc": "^1.1.5",
     "luxon": "^3.0.3",
     "markdown-it": "^13.0.1",
