--- a/admin/config.yml
+++ b/admin/config.yml
@@ -5,7 +5,7 @@ backend:
   auth_scope: repo
   open_authoring: true
   branch: main
-  site_domain: cms.netlify.com
+  site_domain: faq.teipublisher.com
 media_folder: "/img"
 publish_mode: editorial_workflow
 logo_url: https://e-editiones.org/img/e-editiones-logo-color.svg
