--- a/package.json
+++ b/package.json
@@ -24,12 +24,17 @@
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "@teipublisher/pb-eleventy-plugin": "^0.9.5",
+    "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.10.2",
     "eleventy-favicon": "^1.1.3",
     "eleventy-plugin-toc": "^1.1.5",
+    "leaflet": "^1.9.2",
+    "leaflet.markercluster": "^1.5.3",
     "luxon": "^3.0.3",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-attrs": "^4.1.4",
-    "markdown-it-implicit-figures": "^0.10.0"
+    "markdown-it-implicit-figures": "^0.10.0",
+    "rellax": "^1.12.1"
   }
 }
